data/derived/comb/progs/unify/prog5156.ml.out
Characters 245-248:
  | Average(c, d)       -> "(("^exprToString c^"+"+exprToString d")""/2)"
                                               ^^^
Error: This expression has type string but an expression was expected of type
         int
